Adicionado o container com os usuarios e um container vazio para mostrar os dados dos usuarios

--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
 </head>
 <body>
     
+    <div id="container">
+        <ul>
+            <li>Patrick Williams</li>
+            <li>Sam Brady</li>
+            <li>Pinja Laurila</li>
+            <li>Roberto Griffin</li>
+            <li>Ellen Torres</li>
+            <li>Gökhan Oraloğlu</li>
+            <li>Oğuzhan Paksüt</li>
+            <li>Quim Rocha</li>
+        </ul>
+    </div>
+    <div id="display-result">
+        
+    </div>
 
     <script src="./js/script.js"></script>
 </body>
