Adicionado spans para os detalhes de cada usuário

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
         </ul>
     </div>
     <div id="display-result">
-        
+        <span>Name:</span>
+        <span>Street:</span>
+        <span>City:</span>
+        <span>Country:</span>
+        <span>Telephone:</span>
+        <span>Birthday:</span>
     </div>
 
     <script src="./js/script.js"></script>
