--- a/index.html
+++ b/index.html
@@ -10,24 +10,26 @@
 <body>
     
     <div id="container">
-        <ul>
-            <li>Patrick Williams</li>
-            <li>Sam Brady</li>
-            <li>Pinja Laurila</li>
-            <li>Roberto Griffin</li>
-            <li>Ellen Torres</li>
-            <li>Gökhan Oraloğlu</li>
-            <li>Oğuzhan Paksüt</li>
-            <li>Quim Rocha</li>
-        </ul>
-    </div>
-    <div id="display-result">
-        <span>Name:</span>
-        <span>Street:</span>
-        <span>City:</span>
-        <span>Country:</span>
-        <span>Telephone:</span>
-        <span>Birthday:</span>
+        <div id="container-user">
+            <ul>
+                <li>Patrick Williams</li>
+                <li>Sam Brady</li>
+                <li>Pinja Laurila</li>
+                <li>Roberto Griffin</li>
+                <li>Ellen Torres</li>
+                <li>Gökhan Oraloğlu</li>
+                <li>Oğuzhan Paksüt</li>
+                <li>Quim Rocha</li>
+            </ul>
+        </div>
+        <div id="display-result">
+            <span>Name:</span>
+            <span>Street:</span>
+            <span>City:</span>
+            <span>Country:</span>
+            <span>Telephone:</span>
+            <span>Birthday:</span>
+        </div>
     </div>
 
     <script src="./js/script.js"></script>
